--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
     <!-- Inclui o CSS do Leaflet (biblioteca de mapas) -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
-        integrity="sha256-p4NxAo9TchMFlAbEFWVDzQvAgyAOch4nMgeXx3KKtQh/"
-        crossorigin=""/>
+    <!-- ATENÇÃO: Atributo 'integrity' REMOVIDO para evitar bloqueios do navegador. -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" crossorigin=""/>
     <!-- Inclui seu CSS personalizado -->
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -21,7 +20,8 @@
         <nav>
             <a href="#" data-section="dashboard" class="active">Dashboard</a>
             <a href="#" data-section="upload">Upload de Dados</a>
-            <a href="#" data-section="informacoes-gerais">Informações Gerais</a> <!-- ABA PARA PREENCHIMENTO MANUAL -->
+            <a href="#" data-section="informacoes-gerais">Informações Gerais</a>
+            <a href="#" data-section="dados-lotes">Dados Lotes</a> <!-- NOVA ABA PARA A TABELA -->
             <a href="#" data-section="relatorios">Relatórios</a>
             <a href="#" data-section="instrucoes">Instruções</a>
         </nav>
@@ -91,9 +91,19 @@
             </ul>
             <h3>Resumo de Intervenções</h3>
             <ul>
+                <li id="minCustoIntervencao">Custo Mínimo de Intervenção: R$ 0,00</li>
+                <li id="maxCustoIntervencao">Custo Máximo de Intervenção: R$ 0,00</li>
                 <li><span id="areasIdentificadas">0</span> áreas de risco identificadas</li>
                 <li><span id="areasIntervencao">0</span> áreas demandam intervenção estrutural</li>
             </ul>
+
+            <!-- NOVA SEÇÃO: Análise de Tipos de Uso -->
+            <h2>Análise de Tipos de Uso</h2>
+            <div id="useTypesAnalysis" class="use-types-grid">
+                <!-- O conteúdo será gerado dinamicamente pelo JavaScript -->
+                <p>Nenhum dado de tipo de uso disponível. Verifique se a propriedade 'tipo_uso' existe nos seus lotes.</p>
+            </div>
+
 
             <h2>Análise Comparativa por Núcleo</h2>
             <div id="nucleusComparisonChart" class="chart-container">
@@ -101,42 +111,19 @@
                 <!-- Opcional: Adicionar um canvas aqui para Chart.js se for implementar gráficos -->
                 <!-- <canvas id="myChart"></canvas> -->
             </div>
-
-            <h2>Dados Detalhados dos Lotes</h2>
-            <div class="data-table-controls">
-                <input type="text" id="lotSearch" placeholder="Buscar lote...">
-                <button id="exportTableBtn">Exportar</button>
-            </div>
-            <div class="table-scroll-wrapper">
-                <table id="lotesDataTable">
-                    <thead>
-                        <tr>
-                            <th>Código</th>
-                            <th>Núcleo</th>
-                            <th>Tipo de Uso</th>
-                            <th>Área (m²)</th>
-                            <th>Status Risco</th>
-                            <th>APP</th>
-                            <th>Ações</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr><td colspan="7">Nenhum dado disponível. Faça o upload das camadas primeiro.</td></tr>
-                    </tbody>
-                </table>
-            </div>
         </section>
 
         <!-- Upload Section -->
         <section id="upload" class="container">
             <h2>Upload de Camadas GeoJSON</h2>
             <div class="upload-area">
+                <!-- ESTRUTURA PARA UPLOAD -->
                 <label for="geojsonFileInput" class="drag-drop-area">
                     <p class="drag-text">Arraste e solte seus arquivos GeoJSON aqui</p>
                     <p>ou clique para selecionar</p>
-                    <button type="button">Selecionar Arquivos</button>
-                    <input type="file" id="geojsonFileInput" accept=".geojson,.json" multiple style="display: none;">
+                    <button type="button" id="selectFilesVisibleButton">Selecionar Arquivos</button> 
                 </label>
+                <input type="file" id="geojsonFileInput" accept=".geojson,.json" multiple style="display: none;">
             </div>
             <div class="uploaded-files-preview">
                 <h3>Arquivos Selecionados:</h3>
@@ -148,7 +135,7 @@
             <p id="uploadStatus" class="status-message"></p>
         </section>
 
-        <!-- NOVA SEÇÃO: Informações Gerais (Preenchimento Manual) -->
+        <!-- SEÇÃO: Informações Gerais (Preenchimento Manual) -->
         <section id="informacoes-gerais" class="container">
             <h2>Informações Gerais da Área / Projeto</h2>
             <div class="form-grid">
@@ -316,6 +303,33 @@
             <p id="generalInfoStatus" class="status-message"></p>
         </section>
 
+        <!-- NOVA SEÇÃO: Dados Lotes -->
+        <section id="dados-lotes" class="container">
+            <h2>Dados Detalhados dos Lotes</h2>
+            <div class="data-table-controls">
+                <input type="text" id="lotSearch" placeholder="Buscar lote...">
+                <button id="exportTableBtn">Exportar</button>
+            </div>
+            <div class="table-scroll-wrapper">
+                <table id="lotesDataTable">
+                    <thead>
+                        <tr>
+                            <th>Código</th>
+                            <th>Núcleo</th>
+                            <th>Tipo de Uso</th>
+                            <th>Área (m²)</th>
+                            <th>Status Risco</th>
+                            <th>APP</th>
+                            <th>Ações</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr><td colspan="7">Nenhum dado disponível. Faça o upload das camadas primeiro.</td></tr>
+                    </tbody>
+                </table>
+            </div>
+        </section>
+
 
         <!-- Relatórios Section -->
         <section id="relatorios" class="container">
@@ -341,7 +355,7 @@
                         <label><input type="checkbox" id="incDadosGerais" checked> Dados Gerais dos Lotes</label>
                         <label><input type="checkbox" id="incAnaliseRiscos" checked> Análise de Riscos</label>
                         <label><input type="checkbox" id="incAreasPublicas"> Áreas Públicas (APP)</label>
-                        <label><input type="checkbox" id="incInformacoesGerais" checked> Informações Gerais do Projeto</label> <!-- Esta opção puxa do formulário manual -->
+                        <label><input type="checkbox" id="incInformacoesGerais" checked> Informações Gerais do Projeto</label>
                         <label><input type="checkbox" id="incInfraestrutura"> Infraestrutura (Poligonais)</label>
                     </div>
                     <button id="generateReportBtn">Gerar Relatório com IA</button>
@@ -362,18 +376,39 @@
             <h3>Como usar:</h3>
             <ol>
                 <li><strong>Upload de Dados:</strong> Navegue até a aba "Upload de Dados". Arraste e solte seus arquivos GeoJSON (para lotes, APPs, infraestrutura, poligonais etc.) ou clique em "Selecionar Arquivos".
-                    <p class="note"><strong>Importante:</strong> Para que a "Análise de Riscos" e "Lotes em APP" funcionem corretamente no dashboard e relatórios, é fundamental que o GeoJSON dos seus lotes já contenha propriedades como <code>risco</code> (ex: "Baixo", "Médio", "Alto", "Muito Alto"), <code>app</code> (ex: <code>true</code> ou <code>false</code>, ou "sim"/"não"), <code>nucleo</code> e <code>custo_intervencao</code>.</p>
+                    <p class="note"><strong>IMPORTANTE SOBRE SEUS DADOS GEOSPATIAIS:</strong>
+                        <ul>
+                            <li>Todos os seus arquivos GeoJSON **DEVEM estar no sistema de coordenadas Latitude/Longitude (WGS84 - EPSG:4326)** para serem exibidos corretamente no mapa.
+                                <ul>
+                                    <li>**Opção Avançada (embutida no app):** Se seus dados GeoJSON estão em **UTM**, marque a opção "Meus arquivos GeoJSON estão em UTM" na aba Upload e configure a Zona UTM e Hemisfério. **ATENÇÃO: Reprojeção no navegador pode ser lenta para arquivos grandes e a precisão pode variar. A conversão via software GIS (QGIS) ANTES do upload é sempre a mais recomendada.**</li>
+                                </ul>
+                            </li>
+                            <li>Para o Dashboard e Relatórios funcionarem, o arquivo GeoJSON principal dos lotes (que contiver "lotes" no nome) deve ter as seguintes propriedades (entre outras, conforme as suas tabelas):
+                                <ul>
+                                    <li><code>desc_nucleo</code>: Nome do núcleo (para filtros).</li>
+                                    <li><code>risco</code>: Status do risco (ex: "Baixo", "Médio", "Alto", "Muito Alto").</li>
+                                    <li><code>dentro_app</code>: Indicador de se o lote está em APP (número >0 para sim, 0 ou N/A para não).</li>
+                                    <li><code>cod_lote</code>: Código identificador do lote.</li>
+                                    <li><code>area_m2</code>: Área do lote em metros quadrados.</li>
+                                    <li><code>valor</code>: Custo de intervenção (se disponível por lote).</li>
+                                    <li><code>municipio</code> ou <code>nm_mun</code>: Nome do município (para a camada de poligonais e informações IBGE).</li>
+                                </ul>
+                            </li>
+                            <li>Arquivos com "app" no nome serão tratados como Áreas de Preservação Permanente.</li>
+                            <li>Outros arquivos GeoJSON (como "tabela_geral" no seu caso) que não contenham "lotes" nem "app" no nome serão carregados como "Poligonais" genéricas no mapa.</li>
+                        </ul>
+                    </p>
                 </li>
                 <li><strong>Informações Gerais:</strong> Nesta aba, você pode preencher manualmente informações contextuais importantes sobre o projeto, como infraestrutura básica, restrições legais e ambientais, e aspectos fundiários. Estas informações serão incluídas no relatório final quando a opção "Informações Gerais do Projeto" for marcada na aba "Relatórios".</li>
                 <li><strong>Processar e Carregar:</strong> Após selecionar os arquivos GeoJSON, clique em "Processar e Carregar Dados". O aplicativo irá ler, processar e exibir suas camadas no mapa.</li>
                 <li><strong>Dashboard:</strong> A aba "Dashboard" exibe um resumo estatístico dos seus dados, como total de lotes, lotes em risco, lotes em APP, e uma estimativa de custo. Use os filtros para visualizar dados de núcleos específicos.</li>
                 <li><strong>Visualização Geoespacial:</strong> O mapa interativo permite explorar suas camadas. Use a legenda para ligar/desligar a visibilidade das camadas. Clique nos elementos do mapa para ver seus atributos detalhados em um popup.</li>
                 <li><strong>Análise de Riscos:</strong> O dashboard também mostra um resumo da distribuição de risco dos lotes carregados.</li>
-                <li><strong>Dados Detalhados:</strong> A tabela na parte inferior do Dashboard lista os lotes com seus principais atributos. Você pode buscar lotes específicos e exportar a tabela para CSV. O botão "Ver no Mapa" centraliza e dá zoom no lote selecionado.</li>
+                <li><strong>Dados Lotes:</strong> A nova aba "Dados Lotes" lista os lotes em uma tabela detalhada com seus principais atributos. Você pode buscar lotes específicos e exportar a tabela para CSV. O botão "Ver no Mapa" centraliza e dá zoom no lote selecionado.</li>
                 <li><strong>Relatórios:</strong> Na aba "Relatórios", configure o tipo de relatório, selecione os núcleos (se aplicável) e as seções a incluir. Agora você pode incluir as "Informações Gerais do Projeto", puxando os dados preenchidos manualmente. Clique em "Gerar Relatório com IA" para criar um relatório sumarizado.</li>
                 <li><strong>Exportar Relatório:</strong> Use o botão "Exportar Relatório" no cabeçalho para baixar o relatório gerado em formato de texto.</li>
             </ol>
-            <p><strong>Desempenho:</strong> Como este aplicativo funciona totalmente no navegador, o desempenho pode variar dependendo do tamanho e complexidade dos arquivos GeoJSON carregados. Para datasets muito grandes ou análises espaciais complexas em tempo real (como interseção de várias camadas grandes), uma solução com backend seria mais adequada.</p>
+            <p><strong>Desempenho:</strong> Como este aplicativo funciona totalmente no navegador, o desempenho pode variar dependendo do tamanho e complexidade dos arquivos GeoJSON carregados. Para datasets muito grandes ou análises espaciais complexas em tempo real (como interseção de várias camadas grandes), um sistema com backend seria mais adequada.</p>
             <p>Esperamos que o GeoLaudo.AI seja uma ferramenta útil para você!</p>
         </section>
     </main>
@@ -383,11 +418,12 @@
     </footer>
 
     <!-- Inclui o JS do Leaflet -->
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
-        integrity="sha256-CIJ85Q+Xw+x2C9D1X52D5G8S8F8N5X99T999V9999Y="
-        crossorigin=""></script>
+    <!-- ATENÇÃO: Atributo 'integrity' REMOVIDO para evitar bloqueios -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" crossorigin=""></script>
+    <!-- Inclui proj4js e proj4leaflet para futuras necessidades de reprojeção (não usado ativamente agora) -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/proj4js/2.8.0/proj4.min.js"></script>
+    <script src="https://unpkg.com/proj4leaflet@1.0.2/src/proj4leaflet.js"></script>
     <!-- Inclui o Turf.js para operações geoespaciais client-side (se for usar extensivamente) -->
-    <!-- Embora não seja amplamente usado neste template, está aqui para referência futura. -->
     <script src="https://unpkg.com/@turf/turf@6.5.0/turf.min.js"></script>
     <!-- Inclui seu JS personalizado -->
     <script src="js/app.js"></script>
